@@ -31,15 +31,12 @@ Calculate EGME
 PT Grid 0
 Build Collison Operator
 Cell number = 13400, Grain number = 134
-In TS1: The default value of me:DOSCMethod was used.
-In HSO2: The default value of me:DOSCMethod was used.
 In H: The default value of me:DOSCMethod was used.
-In SO2: The default value of me:DOSCMethod was used.
 Diagonalize the Reaction Operator -- Time elapsed: 0 seconds.
 
 In total, 1 temperature/concentration-pressure points calculated.
-Finish Calculation -- Time elapsed: 5 seconds.
- -- Total time elapsed: 7 seconds.
+Finish Calculation -- Time elapsed: 11 seconds.
+ -- Total time elapsed: 32 seconds.
 
 System saved to out.xml
 m_scaleFactor is provided but not used in H.
