@@ -32,7 +32,7 @@ Cell number = 38200, Grain number = 191
 Diagonalize the Reaction Operator -- Time elapsed: 0 seconds.
 
 In total, 2 temperature/concentration-pressure points calculated.
-Finish Calculation -- Time elapsed: 131 seconds.
- -- Total time elapsed: 230 seconds.
+Finish Calculation -- Time elapsed: 162 seconds.
+ -- Total time elapsed: 275 seconds.
 
 System saved to out.xml
